app/webroot/css/main.css
/* bootstrap changes */
body {
    font-size: 12px;
}

#topBar {
     height:42px;
     width:100%;
     min-width:1300px;
}

input[type="file"] {
    margin-bottom: 10px;
}

button .full-width {
  width:100%;
}

.bottom-buffer {
    margin-bottom:10px;
}

/*.close{
    float:none;
}*/

h2{
    font-size: 25px;
    clear:both;
}
h3{
    font-size: 18px;
    line-height: 20px;
}
pre {
    font-size: 11px;

}
.nav-list {
    padding-right: 5px;
}

.nav-list > li > a {
    margin-right: -30px;
}

.navbar-lab .navbar-inner{
    background: #FF9900;
    -webkit-border-radius: 0px !important;
    -moz-border-radius: 0px !important;
    border-radius: 0px !important;
}

.navbar-lab .nav > li > a{
    text-shadow: none;
}

.navbar-inner{
    -webkit-border-radius: 0px !important;
    -moz-border-radius: 0px !important;
    border-radius: 0px !important;
}

/* MULTI-LEVEL DROPDOWNS FOR BOOTSTRAP */
.dropdown-menu .sub-menu {
    left: 100%;
    position: absolute;
    top: 0;
    visibility: hidden;
    margin-top: -1px;
    z-index: 2;
}

.dropdown-menu li:hover .sub-menu {
    visibility: visible;
    display: block;
}

.navbar .sub-menu:before {
    border-bottom: 7px solid transparent;
    border-left: none;
    border-right: 7px solid rgba(0, 0, 0, 0.2);
    border-top: 7px solid transparent;
    left: -7px;
    top: 1px;
}
.navbar .sub-menu:after {
    border-top: 6px solid transparent;
    border-left: none;
    border-right: 6px solid #fff;
    border-bottom: 6px solid transparent;
    left: 10px;
    top: 1px;
    left: -6px;
}
ul.nav li.dropdown:hover ul.dropdown-menu{
    display: block;
}

th.filter {
    white-space:nowrap;
}
th.filter a {
    cursor: pointer;
}

td.searchLabel{
    opacity: 50;
    height: 20px;
    padding-top: 4px;
    padding-left: 4px;
    padding-right: 4px;
    vertical-align:top;
    background-color: #F2F2F2;
    box-shadow: 0px 0px 6px #B2B2B2;
}
td.searchLabelFirst{
    opacity: 50;
    height: 20px;
    padding-top: 4px;
    padding-left: 4px;
    padding-right: 4px;
    vertical-align:top;
    background-color: #F2F2F2;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    box-shadow: 0px 0px 6px #B2B2B2;
}
td.searchLabelCancel{
    opacity: 50;
    height: 20px;
    width: 20px;
    padding-top: 4px;
    padding-left: 5px;
    vertical-align:top;
    background-color: #FFFFFF;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    box-shadow: 0px 0px 6px #B2B2B2;
}

.dropdown-menu{
    top: 90%;
}

form .error-message {
    border-color: #b94a48;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
    background-color: #f2dede;
}


/* Form */
div.form,
div.index,
div.view {
  float:right;
  width:calc(100% - 216px);
  border-left:1px solid #666;
  padding:0px 10px;
  padding-bottom:40px;
}
div.actions {
  float:left;
  width:170px;
}


div.actions h3 {
  padding-top:0;
  color:#777;
}

div.input{
    float:left;
    width: 230px;
}

div.forminfo{
    font-size: 80%;
    width:  220px;
    opacity: 50;
    margin-top: 0px;
    margin-bottom: 10px;
    float: top;
    background-color: #F2F2F2;
    border-radius: 5px;
    box-shadow: 0px 0px 6px #B2B2B2;
}

div.visualisation{
    font-size: 80%;
    display: inline-block;
    opacity: 50;
    margin-top: 0px;
    margin-bottom: 10px;
    float: top;
    background-color: #F2F2F2;
    border-radius: 5px;
    box-shadow: 5px 5px 6px #B2B2B2;
}

div.message{
    font-size: 133%;
    opacity: 50;
    margin-bottom: 15px;
    padding: 5px;
    float: top;
    color: #FFFFFF;
    background-color: #C11B17;
    border-radius: 10px;
    box-shadow: 5px 5px 8px #B2B2B2;
}

.clear{
    clear:both;
}

/** Tables **/
/* Tables */
table.fullwidth {
        width:100%;
        clear:both;
        font-size:12px;
        padding:1px;
        margin-bottom:10px;
}

table.fullwidth th {
        height:28px;
        text-transform:uppercase;
        font-size:10px;
}

table.fullwidth td{
        padding:3px;
        margin:1px 0;
        text-align:center;
}
td.actions {
    text-align: center;
    white-space: nowrap;
}

td.short {
    width:5%;
    white-space: nowrap;
    text-align: left;
}

td.shortish {
    width:10%;
    text-align: left;
}

td.limitedWidth {
    max-width:400px;
    word-wrap:break-word;
}

td.bitwider {
    width:20%;
    text-align: left;
}

td.highlight1 {
    background-color: #0088cc !important;
    color: #ffffff !important;
}

td.highlight2 {
    background-color: #747170 !important;
    color: #ffffff !important;
}

td.highlight3 {
    background-color: red !important;
    color: #ffffff !important;

}

tr.highlightBlueSides {
    border-left:2px solid #0088cc;
    border-right:2px solid #0088cc;
}

tr.highlightBlueTop {
    border-top:2px solid #0088cc;
}

tr.highlightBlueBottom {
    border-bottom:2px solid #0088cc;
}

table.fullwidth {
        border:1px solid #f0f0f0;
}

table.fullwidth th, table.fullwidth th a {
 background:#0088CC;
 color:#fff;
 text-decoration:none;
}


table.fullwidth tr{
    color:#333;
    cursor:pointer;
}


table.fullwidth tr:nth-child(2n) {
    background:#f9f9f9;
    color:#333;
}

table.fullwidth tr:hover{
 color:#333;
 background: #ffffdd;
}

table.fullwidth th:hover{
 color:#fff;
}

.table-hover tbody tr:hover > td,
.table-hover tbody tr:hover > th {
    background-color: #CFEFFF;
}


th a.asc:after {
    content: ' ⇣';
}
th a.desc:after {
    content: ' ⇡';
}

td.action-links {
    text-align: right;
}

.showspaces {

}

/** Scaffold View **/
dl {
    line-height: 2em;
    margin: 0em 0em;
    overflow: hidden
    /*width: 60%;*/
}
dl dd:nth-child(4n+2),
dl dt:nth-child(4n+1) {
    background: #f4f4f4;
}

dt {
    float:left;
    font-weight: bold;
    padding: 0;
    margin: 0;
    vertical-align: top;
    width: 150px;
}
/* ... */

